feat: added blockchain information and syncing status
